# brain-encoding-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/alignment/: embeddings.py  temporal_alignment.py  tr_features.py
src/brain/: roi.py
src/context/: future_windows.py  prediction_windows.py  run_words.py  tr_grouping.py  window_embeddings.py
src/data/: annotations.py  load_runs.py  run_durations.py
src/evaluation/: brain_maps.py  reports.py  timing.py
src/features/: embeddings.py
src/models/: hrf.py  ridge.py
src/pipeline/: config.py  requirements.txt  run_pipeline.py
tests/: test_alignment.py  test_annotations.py  test_ridge.py  test_roi.py
